  Static cleanup. Contributed by Eero Tamminen. (VRI)
- Makefile bios/coldfire.c bios/coldfire.h bios/coldpriv.h bios/serport.c
  include/config.h: Added CONF_WITH_COLDFIRE_RS232 to use the internal ColdFire
  RS-232 port instead of the MFP one. (VRI)
- tools/erd.c: Fixed warnings when compiling erd.c with ICON_RSC defined. (RFB)
- tools/bug.c: Fix warning message. (RFB)
- tools/erd.c: Generate smaller icons.c if CONF_WITH_DESKTOP_ICONS is 0. (RFB)
- include/config.h: Changed the default desktop for 192K ROMs to DESK1. (RFB)

2013-03-21
- Makefile bios/coldfire.c bios/coldfire.h bios/coldfire2.S bios/coldpriv.h
  bios/mfp.c bios/vectors.S: Added CONF_COLDFIRE_TIMER_C to emulate the Timer C
  on ColdFire machines without MFP, using the internal ColdFire timers. (VRI)

2013-03-22
- bios/dmasound.c xbios.c: Implemented setracks() and setmontracks(). (THH)
- include/config.h: Enable CONF_WITH_FASTRAM when CONF_FASTRAM_SIZE is
  defined. (VRI)
- bios/vt52.c: Fixed cursor artifact on Esc E (Clear Screen). (VRI)
- cli/command.c: Use Esc E to clear the screen. (VRI)
- bios/vt52.c: Disable SERIAL_CONSOLE_HONOR_HOME by default. (VRI)
- Makefile release.mk bios/coldfire.c bios/coldfire.h bios/coldfire2.S
  bios/coldpriv.h bios/ide.c bios/machine.c bios/startup.S doc/readme-m548x.txt
  include/config.h: Added support for the ColdFire Evaluation boards. (VRI)

2013-03-23
- include/config.h: Fixed regression on FastRAM support. (VRI)
- tools/erd.c: Changed name of strdup() due to conflict on BSD systems. (RFB)

2013-03-24
- bios/dmasound.* bios/xbios.c: Added dsptristate() and gpio() XBIOS calls,
  and fixed write_microwire() to wait correctly now. (THH)

2013-03-25
- bios/dmasound.c: Added volume control via soundcmd() for STE/TT, too, and
  improved sndstatus() for Falcon. (THH)
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c vdi/vdi_main.c: Static cleanup.
  Contributed by Eero Tamminen. (VRI)
- bios/kprintasm.S: Removed unused ASM glue for kprintf(). (VRI)